[package]
name = "rit"
version = "0.1.0"
edition = "2021"
default-run = "rit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.26", features = ["derive"]}
chrono = "0.4.23"
deflate = "1.0.0"
inflate = "0.4.5"
rand = "0.8.5"
sha-1 = "0.10.0"